<resources>
    <string name="app_name">Smart Restro</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_contact">Enter your contact number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_conf_pass">Confirm your password</string>
    <string name="login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_navigation">Home</string>
    <string name="registration">Registration</string>
    <string name="minimum_password">minimum password</string>
    <string name="auth_failed">auth failed</string>
    <string name="title_activity_promotion">Promotions</string>
    <string name="title_activity_menu">Menus</string>
    <string name="title_activity_my_order">My Order</string>
    <string name="title_activity_my_details">My Details</string>
    <string name="title_activity_shipping_payment">Shipping and Payment</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_my_account">My Account</string>
    <string name="title_activity_book_table">Book Table</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_online_book">Online Table Booking</string>
    <string name="search">Search</string>
    <string name="search_location">Search location</string>
    <string name="send_email">Send Email</string>
    <string name="e_mail_smartrestro_gmail_com">E-mail : smartrestro@gmail.com</string>
    <string name="address_lakeside_pokhara">Address : Lakeside,Pokhara</string>
    <string name="title_activity_main">Smart Restro</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_price">Product Price</string>
    <string name="insert_product_name">Insert Product</string>
    <string name="insert_product_price">Insert Product Price</string>
</resources>
