<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateAccountActivity">


    <ScrollView
        android:id="@+id/scrollViewRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iVUpdateUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />

            <EditText
                android:id="@+id/eTUpdateName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:background="@color/indianred"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:ems="10"
                android:hint="Enter your name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/eTUpdateEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@color/indianred"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:ems="10"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@android:color/black"
                android:textSize="24sp" />

            <!--<EditText
                android:id="@+id/newEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:background="@color/indianred"
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="24sp" />-->

            <EditText
                android:id="@+id/eTUpdateAddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@color/indianred"
                android:drawableLeft="@drawable/ic_location_city_black_24dp"
                android:ems="10"
                android:hint="@string/enter_your_address"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/eTUpdateContact"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@color/indianred"
                android:drawableLeft="@drawable/ic_phone_black_24dp"
                android:ems="10"
                android:hint="@string/enter_your_contact"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textColorHint="@android:color/black"
                android:textSize="24sp" />

            <!--<Button
                android:id="@+id/btnNewChoose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/holo_orange_light"
                android:text="Choose your Image" />-->

            <Button
                android:id="@+id/btnUploadImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:background="@color/yellow"
                android:text="Upload Image"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnUpdateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="15dp"
                android:background="@color/yellow"
                android:text="Update Account"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>